Fix: Fixed an error with the z-index of the left-bar button

--- a/src/components/panel/LeftPanelBar/LeftPanelBar.css
+++ b/src/components/panel/LeftPanelBar/LeftPanelBar.css
@@ -24,7 +24,7 @@
 
 .left-panel-bar-toggle-button {
   left: 0;
-  z-index: 10;
+  z-index: 50;
 }
 
 .left-panel-bar {
